FullQa New/src/objects/Badge_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Badge_Resource_Path__c</fullName>
        <label>Badge Resource Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Badge Setting</label>
    <pluralLabel>Badge Settings</pluralLabel>
</CustomObject>